Image Editor Scopes - Resize Not Respecting DPI #34357

Closed
opened 2013-02-22 04:53:40 +01:00 by Harley Acheson · 3 comments
Member

%%%--- Operating System, Graphics card ---

Windows 7 64-bit, 32-bit Blender build
ATI Radeon HD 5570

- Blender version with error  ---

Blender Version 2.66 Revision 54737

- Short description of error ---

Histograms in Scopes display does not use DPI properly when dragging

- Steps for others to reproduce the error  ---

Increase screen DPI to maximum (File / User Preferences / System / General / DPI). Go to Image Editor and load image (or make new), View Scopes. Click on the horizontal line widget below each histogram that is used to make them larger (longer). As soon as you click it will grow to double size and drag from the wrong location.%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit, 32-bit Blender build ATI Radeon HD 5570 - Blender version with error --- Blender Version 2.66 Revision 54737 - Short description of error --- Histograms in Scopes display does not use DPI properly when dragging - Steps for others to reproduce the error --- Increase screen DPI to maximum (File / User Preferences / System / General / DPI). Go to Image Editor and load image (or make new), View Scopes. Click on the horizontal line widget below each histogram that is used to make them larger (longer). As soon as you click it will grow to double size and drag from the wrong location.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34357
No description provided.