Fix #34357: image editor scope and clip editor track preview did not resize properly with different DPI settings.